--- a/style.css
+++ b/style.css
@@ -63,30 +63,23 @@ body {
     transform: translateY(-2px);
 }
 
-.container {
-    position: absolute; /* Position within timeline-container */
-    top: 220px; /* Place at the top of timeline-container */
-    left: 0;
-    width: 100%; 
-    height: 40px; /* Adjust height as needed */
-}
 
 .left, .right {
     position: absolute;
     width: 50%;
     text-align: center;
     padding: 10px;
-    top: 220px;
+    top: 180px;
     font-size: 20px;
-    height: 40px;
+    
 }
 
 .left {
-    left: 0;
+    left: 0px;
 }
 
 .right {
-    right: 0;
+    right: 0px;
 }
 
 .progress-container {
